methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: not found: value False
  var vuBiscuit = False
                  ^MethodsReturning:5: error: not found: value True
      vuBiscuit = True
                  ^